--- a/test.htm
+++ b/test.htm
@@ -4,7 +4,8 @@
 <title>Test Javascript Work</title>
 
 <style type="text/css">
-div
+<style type="text/css">
+	div
 {
 	width: 100%;
 	text-align: center;
